# esp32-temperature

./: Cargo.toml  README.md  build.rs  run
.cargo/: config
examples/: gpio.rs
src/: mac.rs  main.rs  mdns.rs  stats.rs
