[package]
name = "esp32-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[profile.dev]
opt-level = "s"

[features]
bind = []

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
esp-idf-sys = { version = "0.20" }
embedded-svc = "0.8.3"
esp-idf-svc = { version = "0.20", features = ["binstart"] }
esp-idf-hal = "0.20"
log = "0.4"
mutex-trait = "0.2"
esp32-hal = "0.3"
esp32 = "0.11.0"

[build-dependencies]
embuild = "0.24"
anyhow = "1"

[patch.crates-io]
esp-idf-sys = {path="/Users/lily/projects/github.com/esp-rs/esp-idf-sys"}
